# PhDCode

./: FMF_Lab_notes.one  cv_testis.py  modelsvideo.py  viewsvideo.py
.spyproject/config/: workspace.ini
Beam parametrization/: BeamParam.ipynb  Beam_focus_params.txt  Beam_params.txt  Beam_waist_fit.py  C40APC-C  F260_780nm.txt  PlotWaist.py  PlotWaistThroughOptics.py  TFbP.py  bP.ipynb  bP.py  beamParam.py  beamWaist.py  sympy.ipynb  sympy.py
Beam parametrization/.ipynb_checkpoints/: TFbP-checkpoint.py  sympy-checkpoint.ipynb
Blender/Blender Assests/: B4560AX-Solidworks.sldprt  F260APC-780-Step.step  Gaussian beam shader pack V1.blend  LA1461-C-Step.step  LA1484-C-Step.step  (+1 more)
CAD/Sagnac/: 3D.FCStd  (+18 more)
Sagnac_Interference_Measurements/: SIM.csv  SIM1.csv  SIM2.csv  SIM3.csv  Sagnac_Interference_Measurment.py  connected.py  plot.py  test.py  with_adjusted_legends.py  with_colours.py
ScanCode/: Client.py  Delay_Time.py  Delay_Time_real.py  GatherDataForALongTime.py  GatherTomography.py  LongScan.py  PlotDataFromLongMeasurement.py  PlotTomography.py  PlotterApp.py  PlotterApp_V3.1.py  ProcessTomography.py  RDS.py  SetExposureTime.py  SetOvenTemp.py  TemperatureScan.py  TestOven.py  TestWavePlate.py  Tomography.py  env_test.py  qutag-GetCoincCounter-LivePlotting-example.py  qutag-WriteTimestamps-starter_example.py  test  test_tkinter.py
Testing/: TWTH.txt  TWTH1.txt  TWTH2.txt  YoungsExperiment.py  YoungsExperiment2D.py  calculate_component_averages_and_ratios.py  plot.py
Testing/RPTesting/generatingSignals/: CMakeLists.txt  GenerateSignals.c  arbitrarySignals.c
Testing/RPTesting/slow/: .analogVoltage.c.swp  .rpreadandwrite.h.swp  CMakeLists.txt  Makefile  RKanalog_mixed_signals.h  analogVoltage.c  calib.c  main.c  main.h  rpreadandwrite.c  rpreadandwrite.h
(+332 files in other folders)
